feat: add initial website implementation
Include current version of the website:
- add components
- add page
- add styles
- add assets
- add .prettier config
- add .gitignore
- include existing Vite config

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -159,7 +159,7 @@ label {
   атрибут fill со значением 'none' или начинается с 'url')
  */
 :where([fill]:not(
-  [fill="none"],
+  [fill="currentColor"],
   [fill^="url"]
 )) {
   fill: currentcolor;
